--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3.3'
 
 services:
 
@@ -25,7 +25,7 @@ services:
 
   web:
     build: .
-    command: uvicorn code.app.main:app
+    command: uvicorn app.main:app
     container_name: web
     depends_on:
       - mongodb
